Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt Creator
QTCREATORBUG-12288
DiffEditor doesn't gain keyboard focus
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
Not Evaluated
Fix Version/s:
Qt Creator 3.2.0
Affects Version/s:
Qt Creator 3.1.0
Component/s:
Editors
Labels:
None
Commits:
908db4af5dfd6f40eb2b5c487af93af3842cc8b0
Description
Open a diff
Press page-down
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Jarek Kobus
Reporter:
Orgad Shaneh
Votes:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
22 May '14 10:08
Updated:
13 Aug '14 15:28
Resolved:
13 Aug '14 15:28
Gerrit Reviews
There are no open Gerrit changes
Show
There is 1 closed Gerrit change
Hide
There is 1 closed Gerrit change
Fix focus handling in diff editor
Gerrit Review: