Fix focus handling in diff editor

Task-number: QTCREATORBUG-12288
Change-Id: Ie5195fd3447bcedc4f7fd0515bedb524b5d96663
Reviewed-by: Orgad Shaneh <orgads@gmail.com>